Fixed left align on the buttons and worked on devcie modal

--- a/web/src/app/components/alerttable/alerttable.component.scss
+++ b/web/src/app/components/alerttable/alerttable.component.scss
@@ -13,6 +13,12 @@ td.alert-detail-row {
     font-size: 5pt;
 }
 
+button {
+    text-align: left;
+    padding : 0px 0px;
+    width: wrap;
+}
+
 .alert-row td {
     border-bottom-width: 1;
     background-color: #f7f7f7;
